@@ -377,6 +377,12 @@ scan_again:
 				buf_LRU_block_free_hashed_page((buf_block_t*)
 							       bpage);
 			} else {
+				/* The block_mutex should have been
+				released by buf_LRU_block_remove_hashed_page()
+				when it returns BUF_BLOCK_ZIP_FREE. */
+				ut_ad(block_mutex == &buf_pool_zip_mutex);
+				ut_ad(!mutex_own(block_mutex));
+
 				/* The compressed block descriptor
 				(bpage) has been deallocated and
 				block_mutex released.  Also,
@@ -1523,6 +1529,10 @@ alloc:
 
 		buf_LRU_block_free_hashed_page((buf_block_t*) bpage);
 	} else {
+		/* The block_mutex should have been released by
+		buf_LRU_block_remove_hashed_page() when it returns
+		BUF_BLOCK_ZIP_FREE. */
+		ut_ad(block_mutex == &buf_pool_zip_mutex);
 		mutex_enter(block_mutex);
 	}
 
@@ -1539,9 +1549,9 @@ buf_LRU_block_free_non_file_page(
 {
 	void*	data;
 
+	ut_ad(block);
 	ut_ad(buf_pool_mutex_own());
 	ut_ad(mutex_own(&block->mutex));
-	ut_ad(block);
 
 	switch (buf_block_get_state(block)) {
 	case BUF_BLOCK_MEMORY:
@@ -1761,7 +1771,9 @@ buf_LRU_block_remove_hashed_page(
 			bpage->zip.data = NULL;
 
 			mutex_exit(&((buf_block_t*) bpage)->mutex);
+			buf_pool_mutex_exit_forbid();
 			buf_buddy_free(data, page_zip_get_size(&bpage->zip));
+			buf_pool_mutex_exit_allow();
 			mutex_enter(&((buf_block_t*) bpage)->mutex);
 			page_zip_set_size(&bpage->zip, 0);
 		}
